--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -78,7 +78,7 @@
 		"message": "Посмотреть подробности о рейтингах"
 	},
 	"ratingwindow_addcomment": {
-		"message": "(и можно добавить свой комментарий)"
+		"message": "(или добавить свой комментарий)"
 	},
 	"ratingwindow_inpartnership": {
 		"message": "Сотрудничает с"
