--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -75,7 +75,7 @@
 		"message": "Мой рейтинг"
 	},
 	"ratingwindow_viewscorecard": {
-		"message": "Посмотреть подробности о рейтингах"
+		"message": "Посмотреть подробности о рейтинге"
 	},
 	"ratingwindow_addcomment": {
 		"message": "(или добавить свой комментарий)"
@@ -99,15 +99,15 @@
 		"message": "Этот сайт безопасен. Я хочу оценить его"
 	},
 	"warnings_gotosite": {
-		"message": "Перейти на веб-сайт несмотря на предупреждение"
+		"message": "Открыть сайт, несмотря на предупреждение"
 	},
 	"warnings_reputation": {
-		"message": "У этого сайта плохая репутация."
+		"message": "У этого сайта плохая репутация"
 	},
 	"warnings_rating": {
-		"message": "Вы выставили этому веб-сайту низкий рейтинг, в<br/>результате чего отобразилось предупреждение."
+		"message": "Вы выставили этому сайту низкий рейтинг"
 	},
 	"warnings_unknown": {
-		"message": "Pейтинг этого сайта неизвестен."
+		"message": "Pейтинг этого сайта неизвестен"
 	}
 }
