--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -75,10 +75,10 @@
 		"message": "Valutazione personale"
 	},
 	"ratingwindow_viewscorecard": {
-		"message": "Visualizza dettagli scheda di valutazione."
+		"message": "Visualizza dettagli scheda di valutazione"
 	},
 	"ratingwindow_addcomment": {
-		"message": "Aggiungi un commento."
+		"message": "Aggiungi un commento"
 	},
 	"ratingwindow_inpartnership": {
 		"message": "In collaborazione con"
@@ -102,12 +102,12 @@
 		"message": "Ignora avviso e vai al sito"
 	},
 	"warnings_reputation": {
-		"message": "Questo sito ha una reputazione scadente."
+		"message": "Questo sito ha una reputazione scadente"
 	},
 	"warnings_rating": {
-		"message": "La valutazione scadente assegnata al<br/>sito ha generato un avviso."
+		"message": "La valutazione scadente assegnata al<br/>sito ha generato un avviso"
 	},
 	"warnings_unknown": {
-		"message": "Questo sito ha una valutazione sconosciuta."
+		"message": "Questo sito ha una valutazione sconosciuta"
 	}
 }
