--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -75,10 +75,10 @@
 		"message": "Moje hodnocení"
 	},
 	"ratingwindow_viewscorecard": {
-		"message": "Zobrazit výsledky s detaily hodnocení."
+		"message": "Zobrazit výsledky s detaily hodnocení"
 	},
 	"ratingwindow_addcomment": {
-		"message": "Přidat komentář."
+		"message": "Přidat komentář"
 	},
 	"ratingwindow_inpartnership": {
 		"message": "Ve spolupráci s"
@@ -102,12 +102,12 @@
 		"message": "Ignorovat varování a vstoupit na stránku"
 	},
 	"warnings_reputation": {
-		"message": "Reputace této stránky je špatná."
+		"message": "Reputace této stránky je špatná"
 	},
 	"warnings_rating": {
-		"message": "Dali jste této stránce špatné hodnocení,<br/>což spustilo varování."
+		"message": "Dali jste této stránce špatné hodnocení,<br/>což spustilo varování"
 	},
 	"warnings_unknown": {
-		"message": "Hodnocení této stránky není známo."
+		"message": "Hodnocení této stránky není známo"
 	}
 }
