--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -102,12 +102,12 @@
 		"message": "Warnung ignorieren und Website aufrufen"
 	},
 	"warnings_reputation": {
-		"message": "Diese Seite hat einen schlechten Ruf basierend<br/>auf Benutzerbewertungen."
+		"message": "Diese Seite hat einen schlechten Ruf basierend<br/>auf Benutzerbewertungen"
 	},
 	"warnings_rating": {
-		"message": "Sie haben dieser Website eine schlechte Bewertung<br/>gegeben, die eine Warnung ausgelöst hat."
+		"message": "Sie haben dieser Website eine schlechte Bewertung<br/>gegeben, die eine Warnung ausgelöst hat"
 	},
 	"warnings_unknown": {
-		"message": "Diese Website besitzt eine unbekannte Bewertung."
+		"message": "Diese Website besitzt eine unbekannte Bewertung"
 	}
 }
