--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -75,10 +75,10 @@
 		"message": "Mi valoración"
 	},
 	"ratingwindow_viewscorecard": {
-		"message": "Ver puntuación para detalles de valoración."
+		"message": "Ver puntuación para detalles de valoración"
 	},
 	"ratingwindow_addcomment": {
-		"message": "Añadir comentario."
+		"message": "Añadir comentario"
 	},
 	"ratingwindow_inpartnership": {
 		"message": "En asociación con"
@@ -102,12 +102,12 @@
 		"message": "Omitir la advertencia e ir al sitio"
 	},
 	"warnings_reputation": {
-		"message": "Este sitio tiene una reputación pobre."
+		"message": "Este sitio tiene una reputación pobre"
 	},
 	"warnings_rating": {
-		"message": "Ha asignado a este sitio una valoración pobre,<br/>lo que ha desencadenado una advertencia."
+		"message": "Ha asignado a este sitio una valoración pobre,<br/>lo que ha desencadenado una advertencia"
 	},
 	"warnings_unknown": {
-		"message": "Este sitio tiene una valoración desconocida."
+		"message": "Este sitio tiene una valoración desconocida"
 	}
 }
