--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -75,10 +75,10 @@
 		"message": "Oma luokitus"
 	},
 	"ratingwindow_viewscorecard": {
-		"message": "Näet yksityiskohtaiset tiedot tuloskortista."
+		"message": "Näet yksityiskohtaiset tiedot tuloskortista"
 	},
 	"ratingwindow_addcomment": {
-		"message": "Voit myös lisätä oman kommentin."
+		"message": "Voit myös lisätä oman kommentin"
 	},
 	"ratingwindow_inpartnership": {
 		"message": "Kumppanina"
@@ -102,12 +102,12 @@
 		"message": "Ohita varoitus ja siirry sivustoon"
 	},
 	"warnings_reputation": {
-		"message": "Tällä sivustolla on huono maine käyttäjien<br/>luokitusten perusteella."
+		"message": "Tällä sivustolla on huono maine käyttäjien<br/>luokitusten perusteella"
 	},
 	"warnings_rating": {
-		"message": "Sivustolle antamasi huono luokitus<br/>laukaisi varoituksen."
+		"message": "Sivustolle antamasi huono luokitus<br/>laukaisi varoituksen"
 	},
 	"warnings_unknown": {
-		"message": "Tämän sivuston luokitus on tuntematon."
+		"message": "Tämän sivuston luokitus on tuntematon"
 	}
 }
