--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -102,12 +102,12 @@
 		"message": "경고를 무시하고 사이트로 들어가기"
 	},
 	"warnings_reputation": {
-		"message": "이 사이트는 나쁜 평가를 가지고 있습니다."
+		"message": "이 사이트는 나쁜 평가를 가지고 있습니다"
 	},
 	"warnings_rating": {
-		"message": "사용자님은 이 사이트에 나쁜 평가를 주셨습니다.<br/>나쁜 평가는 경고를 작동시킵니다."
+		"message": "사용자님은 이 사이트에 나쁜 평가를 주셨습니다.<br/>나쁜 평가는 경고를 작동시킵니다"
 	},
 	"warnings_unknown": {
-		"message": "이 사이트는 평가를 가지고 있지 않습니다."
+		"message": "이 사이트는 평가를 가지고 있지 않습니다"
 	}
 }
