--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -75,10 +75,10 @@
 		"message": "我的评级"
 	},
 	"ratingwindow_viewscorecard": {
-		"message": "查看登记卡上的评级详情。"
+		"message": "查看登记卡上的评级详情"
 	},
 	"ratingwindow_addcomment": {
-		"message": "添加评论。"
+		"message": "添加评论"
 	},
 	"ratingwindow_inpartnership": {
 		"message": "In partnership with"
@@ -102,12 +102,12 @@
 		"message": "忽略警告并进入该网站"
 	},
 	"warnings_reputation": {
-		"message": "此网站的声誉较差。"
+		"message": "此网站的声誉较差"
 	},
 	"warnings_rating": {
-		"message": "您已将此网站评为较差等级，<br/>该评级触发了警告。"
+		"message": "您已将此网站评为较差等级，<br/>该评级触发了警告"
 	},
 	"warnings_unknown": {
-		"message": "此网站的评级未知。"
+		"message": "此网站的评级未知"
 	}
 }
