fix current state of dev of WS

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -78,7 +78,7 @@
 		"message": "View scorecard for rating details"
 	},
 	"ratingwindow_addcomment": {
-		"message": "Add your comment."
+		"message": "Add your comment"
 	},
 	"ratingwindow_inpartnership": {
 		"message": "In partnership with"
@@ -96,7 +96,7 @@
 		"message": "View rating details and comments"
 	},
 	"warnings_ratesite": {
-		"message": "This site is safe - I want to rate it"
+		"message": "This site is safe - I want to <a>rate it</a>"
 	},
 	"warnings_gotosite": {
 		"message": "Ignore warning and go to the site"
@@ -109,5 +109,20 @@
 	},
 	"warnings_unknown": {
 		"message": "This site has an unknown rating"
+	},
+	"warnings_warning": {
+		"message": "Warning!"
+	},
+	"warnings_goto": {
+		"message": "Go to the site"
+	},
+	"warnings_leave": {
+		"message": "Leave the site"
+	},
+	"warnings_back": {
+		"message": "Go back"
+	},
+	"contextmenu_open_scorecard": {
+		"message": "Open WOT scorecard"
 	}
 }
