--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -96,7 +96,7 @@
 		"message": "Ver detalles de valoración y comentarios"
 	},
 	"warnings_ratesite": {
-		"message": "Este sitio es seguro y deseo valorarlo"
+		"message": "Este sitio es seguro y deseo <a>valorarlo</a>"
 	},
 	"warnings_gotosite": {
 		"message": "Omitir la advertencia e ir al sitio"
@@ -109,5 +109,20 @@
 	},
 	"warnings_unknown": {
 		"message": "Este sitio tiene una valoración desconocida"
+	},
+	"warnings_warning": {
+		"message": "¡Advertencia!"
+	},
+	"warnings_goto": {
+		"message": "Vaya al sitio"
+	},
+	"warnings_leave": {
+		"message": "Abandone el sitio"
+	},
+	"warnings_back": {
+		"message": "Regrese"
+	},
+	"contextmenu_open_scorecard": {
+		"message": "Open WOT scorecard"
 	}
 }
