--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -93,10 +93,10 @@
 		"message": "Zanechat komentář?"
 	},
 	"warnings_information": {
-		"message": "Zobrazit podrobnosti hodnocení a komentáře"
+		"message": "Zobrazit hodnocení a komentáře"
 	},
 	"warnings_ratesite": {
-		"message": "Tato stránka je bezpečná - Chci ji ohodnotit"
+		"message": "Tato stránka je bezpečná - Chci <a>ji ohodnotit</a>"
 	},
 	"warnings_gotosite": {
 		"message": "Ignorovat varování a vstoupit na stránku"
@@ -105,9 +105,24 @@
 		"message": "Reputace této stránky je špatná"
 	},
 	"warnings_rating": {
-		"message": "Dali jste této stránce špatné hodnocení,<br/>což spustilo varování"
+		"message": "Dali jste této stránce špatné hodnocení, což spustilo varování"
 	},
 	"warnings_unknown": {
 		"message": "Hodnocení této stránky není známo"
+	},
+	"warnings_warning": {
+		"message": "Varování!"
+	},
+	"warnings_goto": {
+		"message": ""
+	},
+	"warnings_leave": {
+		"message": ""
+	},
+	"warnings_back": {
+		"message": ""
+	},
+	"contextmenu_open_scorecard": {
+		"message": "Open WOT scorecard"
 	}
 }
