--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -90,13 +90,13 @@
 		"message": ""
 	},
 	"ratingwindow_helplink": {
-		"message": "Voulez-vous laisser un commentaire ?"
+		"message": "Voulez-vous laisser un commentaire?"
 	},
 	"warnings_information": {
 		"message": "Afficher l'évaluation détaillée et les commentaires"
 	},
 	"warnings_ratesite": {
-		"message": "Ce site est sûr - Je souhaite l'évaluer"
+		"message": "Ce site est sûr - Je souhaite <a>l'évaluer</a>"
 	},
 	"warnings_gotosite": {
 		"message": "Ignorer l'alerte et accéder au site"
@@ -109,5 +109,20 @@
 	},
 	"warnings_unknown": {
 		"message": "Ce site présente une évaluation inconnue"
+	},
+	"warnings_warning": {
+		"message": "Attention!"
+	},
+	"warnings_goto": {
+		"message": "Entrer sur le site"
+	},
+	"warnings_leave": {
+		"message": "Quitter le site"
+	},
+	"warnings_back": {
+		"message": "Reculer"
+	},
+	"contextmenu_open_scorecard": {
+		"message": "Open WOT scorecard"
 	}
 }
