--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -96,7 +96,7 @@
 		"message": "자세한 평가와 후기 보기"
 	},
 	"warnings_ratesite": {
-		"message": "이 사이트는 안전합니다- 이 사이트를 평가하기"
+		"message": "이 사이트는 안전합니다- <a>이 사이트를 평가하기</a>"
 	},
 	"warnings_gotosite": {
 		"message": "경고를 무시하고 사이트로 들어가기"
@@ -109,5 +109,20 @@
 	},
 	"warnings_unknown": {
 		"message": "이 사이트는 평가를 가지고 있지 않습니다"
+	},
+	"warnings_warning": {
+		"message": "경고!"
+	},
+	"warnings_goto": {
+		"message": "사이트 가기"
+	},
+	"warnings_leave": {
+		"message": "사이트 나가기"
+	},
+	"warnings_back": {
+		"message": "돌아가기"
+	},
+	"contextmenu_open_scorecard": {
+		"message": "Open WOT scorecard"
 	}
 }
