--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -96,7 +96,7 @@
 		"message": "Pokaż szczegóły ocen i komentarze"
 	},
 	"warnings_ratesite": {
-		"message": "Ta witryna jest bezpieczna - chcę ją ocenić"
+		"message": "Ta witryna jest bezpieczna - chcę <a>ją ocenić</a>"
 	},
 	"warnings_gotosite": {
 		"message": "Zignoruj ostrzeżenie i przejdź do witryny"
@@ -109,5 +109,20 @@
 	},
 	"warnings_unknown": {
 		"message": "Ocena tej witryny jest nieznana"
+	},
+	"warnings_warning": {
+		"message": "Ostrzeżenie!"
+	},
+	"warnings_goto": {
+		"message": "Idź do strony"
+	},
+	"warnings_leave": {
+		"message": "Porzuć stronę"
+	},
+	"warnings_back": {
+		"message": "Powrót"
+	},
+	"contextmenu_open_scorecard": {
+		"message": "Open WOT scorecard"
 	}
 }
