--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -96,7 +96,7 @@
 		"message": "Visa klassificeringsdetaljer och kommentarer"
 	},
 	"warnings_ratesite": {
-		"message": "Webbplatsen är säker - jag vill klassificera den"
+		"message": "Webbplatsen är säker - jag vill <a>klassificera den</a>"
 	},
 	"warnings_gotosite": {
 		"message": "Ignorera varningen och gå till webbplatsen"
@@ -109,5 +109,20 @@
 	},
 	"warnings_unknown": {
 		"message": "Webbplatsen har en okänd klassificering"
+	},
+	"warnings_warning": {
+		"message": "Varning!"
+	},
+	"warnings_goto": {
+		"message": "Gå till webbsidan"
+	},
+	"warnings_leave": {
+		"message": "Lämna webbsidan"
+	},
+	"warnings_back": {
+		"message": "Gå tillbaka"
+	},
+	"contextmenu_open_scorecard": {
+		"message": "Öppna WOT Score-kort"
 	}
 }
