--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -5,6 +5,9 @@
 	"lang": {
 		"message": "pt-BR"
 	},
+	"ext_description": {
+		"message": "O WOT mostra em que sites você pode confiar com base nas experiências de milhões de usuários no mundo inteiro.O WOT é rápido, fácil de usar e totalmente grátis."
+	},
 	"components_0": {
 		"message": "Fidedignidade"
 	},
