--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -5,6 +5,9 @@
 	"lang": {
 		"message": "zh-TW"
 	},
+	"ext_description": {
+		"message": "WOT 會根據全世界數百萬用戶的經驗，告訴您哪些是可以信任的網站。WOT 快速又容易上手，而且完全免費。"
+	},
 	"components_0": {
 		"message": "可靠性"
 	},
@@ -114,13 +117,13 @@
 		"message": "警告!"
 	},
 	"warnings_goto": {
-		"message": ""
+		"message": "Open the site"
 	},
 	"warnings_leave": {
-		"message": ""
+		"message": "Leave the site"
 	},
 	"warnings_back": {
-		"message": ""
+		"message": "Go back"
 	},
 	"contextmenu_open_scorecard": {
 		"message": "Open WOT scorecard"
