--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -76,7 +76,7 @@
         "message": "Valutazione personale"
     }, 
     "ratingwindow_viewscorecard": {
-        "message": "Visualizza i dettagli e i commenti", 
+        "message": "Visualizza dettagli e commenti",
         "description": ""
     }, 
     "ratingwindow_addcomment": {
@@ -103,7 +103,7 @@
         "description": ""
     }, 
     "warnings_information": {
-        "message": "Visualizza i dettagli e i commenti", 
+        "message": "Visualizza dettagli e commenti",
         "description": ""
     }, 
     "warnings_ratesite": {
@@ -141,11 +141,11 @@
         "description": ""
     }, 
     "warnings_othersreasontitle": {
-        "message": "Le opinioni di altri utenti", 
+        "message": "Opinioni di altri utenti",
         "description": ""
     }, 
     "warnings_noreasontitle": {
-        "message": "Gli utenti non hanno ancora identificato questo sito e lo hanno valutato soltanto", 
+        "message": "Gli utenti non hanno ancora classificato questo sito e lo hanno soltanto valutato",
         "description": ""
     }, 
     "contextmenu_open_scorecard": {
@@ -165,7 +165,7 @@
         "description": ""
     }, 
     "wt_warning_text": {
-        "message": "<p>WOT ti avverte quando visiti un sito con una scarsa reputazione in base alle esperienze degli altri utenti o alle liste nere di terze parti. L'avviso indica anche le ragioni della scarsa reputazione.</p><p>{WT_LEARNMORE}</p><p>Se non desideri visualizzare gli avvisi, puoi disattivarli.</p>", 
+        "message": "<p>WOT ti avverte quando visiti un sito con una scarsa reputazione in base all'esperienza di altri utenti o alle liste nere di terze parti. L'avviso indica anche le ragioni della scarsa reputazione.</p><p>{WT_LEARNMORE}</p><p>Se non desideri visualizzare gli avvisi, puoi disattivarli.</p>",
         "description": ""
     }, 
     "wt_warning_turnoff": {
@@ -177,15 +177,15 @@
         "description": ""
     }, 
     "wt_rw_text_hdr": {
-        "message": "Condividi le tue esperienze!", 
+        "message": "Condividi la tua esperienza!",
         "description": ""
     }, 
     "wt_rw_text": {
-        "message": "<p>La finestra di valutazione di WOT ti mostra la reputazione del sito Web in base alle esperienze degli altri utenti. Ora puoi valutare e commentare direttamente dalla finestra aggiornata. Inizia a valutare facendo clic sulle barre colorate.</p><p class='wot-c'><a id='wt-learnmore-link'>Ulteriori informazioni</a> su WOT.</p>", 
+        "message": "<p>La finestra di valutazione di WOT ti mostra la reputazione del sito Web in base all'esperienza di altri utenti. Ora puoi valutare e commentare direttamente dalla finestra aggiornata. Inizia a valutare facendo clic sulle barre colorate.</p><p class='wot-c'><a id='wt-learnmore-link'>Ulteriori informazioni</a> su WOT.</p>",
         "description": ""
     }, 
     "wt_donut_msg": {
-        "message": "<p>WOT ti mostra le reputazioni dei siti Web in base alle esperienze degli altri utenti mostrandoti delle icone simili a un semaforo.</p><p>Posiziona il puntatore del mouse sull'icona per vedere le reputazioni e le ragioni per cui sono state date.</p>", 
+        "message": "<p>WOT ti mostra le reputazioni dei siti Web in base all'esperienza di altri utenti mostrandoti delle icone simili a un semaforo.</p><p>Posiziona il puntatore del mouse sull'icona per vedere le reputazioni e le ragioni per cui sono state date.</p>",
         "description": ""
     }, 
     "wt_donut_btn": {
@@ -237,7 +237,7 @@
         "description": ""
     }, 
     "ratingwindow_question4": {
-        "message": "Quanto è adatto il sito per i bambini?", 
+        "message": "Quanto questo sito è adatto ai bambini?",
         "description": ""
     }, 
     "ratingwindow_categories": {
@@ -289,7 +289,7 @@
         "description": "TODO: TRANSLATE"
     }, 
     "ratingwindow_fulllist": {
-        "message": "la lista completa",
+        "message": "lista completa",
         "description": ""
     }, 
     "ratingwindow_vote_yes": {
@@ -361,11 +361,11 @@
         "description": ""
     }, 
     "buttons_delete": {
-        "message": "Cancella le valutazioni", 
+        "message": "Rimuovi valutazioni",
         "description": ""
     }, 
     "buttons_delete_title": {
-        "message": "Cancella le mie valutazioni e categorie per il sito", 
+        "message": "Rimuovi le mie valutazioni e categorie per il sito",
         "description": ""
     }, 
     "buttons_cancel": {
@@ -421,15 +421,15 @@
         "description": ""
     }, 
     "bl_description": {
-        "message": "Questo sito web appare su una lista nera di terze parti", 
+        "message": "Questo sito web appare in una lista nera di terze parti",
         "description": ""
     }, 
     "bl_description_pl": {
-        "message": "Questo sito web appare sulle liste nere di terze parti", 
+        "message": "Questo sito web appare in liste nere di terze parti",
         "description": ""
     }, 
     "bl_information": {
-        "message": "WOT utilizza liste nere di terze parti per mettere in guardia gli utenti circa le minacce tecniche come virus e malware. <a>Leggi tutto</a>", 
+        "message": "WOT utilizza liste nere di terze parti per mettere in guardia gli utenti su minacce come virus e malware. <a>Leggi tutto</a>",
         "description": ""
     }, 
     "bl_malware": {
@@ -457,7 +457,7 @@
         "description": ""
     }, 
     "warning_button": {
-        "message": "Dettagli sulle valutazioni", 
+        "message": "Dettagli sulla valutazione",
         "description": "imported from firefox add-on"
     }, 
     "warnings_message_rating": {
@@ -473,7 +473,7 @@
         "description": "imported from firefox add-on"
     }, 
     "messages_disabled": {
-        "message": "Componente aggiuntivo disattivato.", 
+        "message": "Componente aggiuntivo disattivato",
         "description": "imported from firefox add-on"
     }, 
     "auto_update_title": {
