--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -321,7 +321,7 @@
         "description": ""
     }, 
     "testimony_0_levels_r4": {
-        "message": "vertraue ich nicht", 
+        "message": "vertraue ich",
         "description": ""
     }, 
     "testimony_0_levels_r5": {
@@ -473,7 +473,7 @@
         "description": "imported from firefox add-on"
     }, 
     "messages_disabled": {
-        "message": "Das Add-on wurde deaktiviert.", 
+        "message": "Das Add-on wurde deaktiviert",
         "description": "imported from firefox add-on"
     }, 
     "auto_update_title": {
