--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -473,7 +473,7 @@
         "description": "imported from firefox add-on"
     }, 
     "messages_disabled": {
-        "message": "Ha desactivado el complemento.", 
+        "message": "Ha desactivado el complemento",
         "description": "imported from firefox add-on"
     }, 
     "auto_update_title": {
