--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -473,7 +473,7 @@
         "description": "imported from firefox add-on"
     }, 
     "messages_disabled": {
-        "message": "Vous avez désactivé le composant additionnel.", 
+        "message": "Vous avez désactivé le composant additionnel",
         "description": "imported from firefox add-on"
     }, 
     "auto_update_title": {
