--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -473,7 +473,7 @@
         "description": "imported from firefox add-on"
     }, 
     "messages_disabled": {
-        "message": "Dodatek został wyłączony; kliknij, aby go włączyć.", 
+        "message": "Dodatek został wyłączony",
         "description": "imported from firefox add-on"
     }, 
     "auto_update_title": {
