--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -472,7 +472,7 @@
         "description": "imported from firefox add-on"
     }, 
     "messages_disabled": {
-        "message": "Du har inaktiverat tilläggsprogrammet.", 
+        "message": "Du har inaktiverat tilläggsprogrammet",
         "description": "imported from firefox add-on"
     }, 
     "auto_update_title": {
