--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -473,7 +473,7 @@
         "description": "imported from firefox add-on"
     }, 
     "messages_disabled": {
-        "message": "您已禁用了加载项；单击可启用。", 
+        "message": "您已禁用了加载项",
         "description": "imported from firefox add-on"
     }, 
     "auto_update_title": {
